tests/fail/110-fail-as-binary-non-u8-leaf.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad {
    #[df_derive(as_binary)]
    ints: Vec<i32>,
}

fn main() {}
