tests/fail/110-fail-as-binary-non-u8-leaf.stderr
error: field `ints` has `as_binary` but its base type is not `u8`; `as_binary` requires a `Vec<u8>` shape (the innermost `Vec` becomes the Binary blob). Change the field type or drop the attribute.
 --> tests/fail/110-fail-as-binary-non-u8-leaf.rs:7:5
  |
7 | /     #[df_derive(as_binary)]
8 | |     ints: Vec<i32>,
  | |__________________^
